resolving sonar scan issues